force-app/main/default/objects/Meeting_Note__c/Meeting_Note__c.object-meta.xml
<CustomObject>
    <description>E4 미팅 메모·마스킹 파이프라인. 원문(Raw)과 마스킹본(Sanitized)을 분리 저장하고 치환 건수를 기록한다. Opportunity와는 Lookup으로 연결(Apex Managed Sharing 사용 위해 Master-Detail 금지 - ADR).</description>
    <label>Meeting Note</label>
    <nameField>
        <displayFormat>MN-{0000}</displayFormat>
        <label>Meeting Note Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meeting Notes</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>