force-app/main/default/objects/Meeting_Note__c/fields/Agent_Session_Id__c.field-meta.xml
<CustomField>
    <fullName>Agent_Session_Id__c</fullName>
    <description>docs/60 — 메모 등록 시 RM_Assistant 에이전트가 만든 대화 세션 Id. 추가 질문 시 같은 세션을 이어가는 데 사용.</description>
    <label>에이전트 세션 Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>