force-app/main/default/objects/Meeting_Note__c/fields/Attendees__c.field-meta.xml
<CustomField>
    <fullName>Attendees__c</fullName>
    <description>미팅 참석자 목록(자유 텍스트, 쉼표 구분). 구조화된 연락처 참조가 아니다.</description>
    <label>Attendees</label>
    <length>255</length>
    <type>Text</type>
</CustomField>