force-app/main/default/objects/Meeting_Note__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>이 미팅의 고객 담당자. Contact에서 시작했거나 Event.WhoId가 Contact인 경우에만 채워진다. 불명확하면 비워 둔다.</description>
    <label>담당자</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>미팅 기록</relationshipLabel>
    <relationshipName>Meeting_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>