force-app/main/default/objects/Meeting_Note__c/fields/Masked_Count__c.field-meta.xml
<CustomField>
    <fullName>Masked_Count__c</fullName>
    <description>마스킹 처리 시 치환된 개인정보 항목 건수.</description>
    <label>Masked Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>