force-app/main/default/objects/Meeting_Note__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>연결된 영업기회. Apex Managed Sharing(RM_Access) 사용을 위해 Master-Detail이 아닌 Lookup으로 연결한다(ADR).</description>
    <label>영업기회</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Meeting Notes</relationshipLabel>
    <relationshipName>Meeting_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>