force-app/main/default/objects/Meeting_Note__c/fields/Raw_Content__c.field-meta.xml
<CustomField>
    <fullName>Raw_Content__c</fullName>
    <description>마스킹 전 미팅 메모 원문(Raw). 개인정보 포함 가능 - 접근 제한 필요.</description>
    <label>Raw Content</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>