force-app/main/default/objects/Meeting_Note__c/fields/Sanitized_Content__c.field-meta.xml
<CustomField>
    <fullName>Sanitized_Content__c</fullName>
    <description>개인정보 치환이 완료된 미팅 메모 마스킹본(Sanitized).</description>
    <label>Sanitized Content</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>