force-app/main/default/objects/Meeting_Note__c/listViews/All_Meeting_Notes.listView-meta.xml
<ListView>
    <fullName>All_Meeting_Notes</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Meeting Notes</label>
</ListView>